@@ -23,6 +23,7 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
  * Provide a more accessible page title where the unique information is shown first and the CMS name is shown last (Mehrdad Moradizadeh)
  * Pull out behaviour from `AbstractFormField` to `FormMixin` and `AbstractEmailForm` to `EmailFormMixin` to allow use with subclasses of `Page` [](form_builder_mixins) (Mehrdad Moradizadeh, Kurt Wall)
  * Add a `docs.wagtail.org/.well-known/security.txt` so that the security policy is available as per the specification on [https://securitytxt.org/](https://securitytxt.org/) (Jake Howard)
+ * Add unit tests for the `classnames` Wagtail admin template tag (Mehrdad Moradizadeh)
 
 ### Bug fixes
 
